<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Угадай число!</string>
    <string name="behind">Недолёт!</string>
    <string name="ahead">Перелёт!</string>
    <string name="hit">В точку!</string>
    <string name="input_value">Ввести значение</string>
    <string name="play_more">Сыграть ещё</string>
    <string name="try_to_guess">Попробуйте угадать число (1 &#8211; 200) </string>
    <string name="error_empty_str">Вы ничего не ввели!</string>
    <string name="error_too_big">Вы ввели число, большее 200!</string>
    <string name="error_too_small">Вы ввели число, меньшее 1!</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="button_play_more">Button</string>
    <string name="DialogText">TextView</string>
    <string name="game_over">Вы выиграли!</string>

</resources>